# AdvCpp_hw

./: .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md
include/: utils.h
lib/concurrentsync/: CMakeLists.txt  README.md
lib/concurrentsync/include/concurrentsync/: errors.h  mutex.h  semaphore.h
lib/concurrentsync/src/: errors.cpp  mutex.cpp  semaphore.cpp
lib/coroutine/: CMakeLists.txt  README.md
lib/coroutine/include/coroutine/: coroutine.h
lib/coroutine/src/: coroutine.cpp
lib/linuxproc/: CMakeLists.txt  README.md
lib/linuxproc/include/: descriptor.h  errors.h  library.h  linuxproc_errors.h  pipe.h  process.h
lib/linuxproc/include/linuxproc/: errors.h  process.h
lib/linuxproc/lib/: unixprimwrap
lib/linuxproc/src/: descriptor.cpp  errors.cpp  linuxproc_errors.cpp  pipe.cpp  process.cpp
lib/raiiguards/: CMakeLists.txt  README.md
lib/raiiguards/include/raiiguards/: errors.h  scope_guard.h
lib/raiiguards/src/: errors.cpp  scope_guard.cpp
lib/shmem/: CMakeLists.txt  README.md
lib/shmem/include/shmem/: errors.h  shared_memory.h  types.h
lib/shmem/include/shmem/allocators/: linear_allocator.h
lib/shmem/include/shmem/concurrentsync/: mutex.h  semaphore.h
lib/shmem/include/shmem/containers/: map.h
lib/shmem/src/: errors.cpp
lib/shmem/src/concurrentsync/: mutex.cpp  semaphore.cpp
lib/tcpcon/: CMakeLists.txt  README.md
lib/tcpcon/include/: tcp_connection.h  tcp_server.h  tcp_sync_connection.h  tcp_sync_server.h  tcpcon_errors.h
lib/tcpcon/include/tcpcon/: errors.h
lib/tcpcon/include/tcpcon/async/: connection.h  utils.h
lib/tcpcon/include/tcpcon/async/epoll/: server.h
lib/tcpcon/include/tcpcon/sync/: connection.h  server.h
lib/tcpcon/lib/: linuxproc
lib/tcpcon/src/: errors.cpp  tcp_connection.cpp  tcp_server.cpp  tcp_sync_connection.cpp  tcp_sync_server.cpp  tcpcon_errors.cpp
lib/tcpcon/src/async/: connection.cpp  utils.cpp
lib/tcpcon/src/async/epoll/: server.cpp
lib/tcpcon/src/sync/: connection.cpp  server.cpp
lib/tinyhttp/: CMakeLists.txt  README.md
lib/tinyhttp/include/tinyhttp/: basic_static_server.h  connection.h  constants.h  epoll_worker.h  errors.h  http_headers.h  http_query_parameters.h  http_request.h  http_request_line.h  http_response.h  http_response_line.h  server.h  utils.h
lib/tinyhttp/src/: basic_static_server.cpp  connection.cpp  constants.cpp  epoll_worker.cpp  errors.cpp  http_headers.cpp  http_query_parameters.cpp  http_request.cpp  http_request_line.cpp  http_response.cpp  http_response_line.cpp  server.cpp  utils.cpp
lib/trivilog/: CMakeLists.txt  README.md
lib/trivilog/include/: base_logger.h  file_logger.h  global_logger.h  log_level.h  stderr_buff_logger.h  stderr_logger.h  stdout_logger.h  trivilog.h  trivilog_errors.h
lib/trivilog/include/trivilog/: base_logger.h  errors.h  file_logger.h  global_logger.h  log_level.h  safe_file_logger.h  safe_stderr_buff_logger.h  safe_stderr_logger.h  safe_stdout_logger.h  stderr_buff_logger.h  stderr_logger.h  stdout_logger.h  trivilog.h
lib/trivilog/src/: base_logger.cpp  file_logger.cpp  global_logger.cpp  log_level.h  safe_file_logger.cpp  safe_stderr_buff_logger.cpp  safe_stderr_logger.cpp  safe_stdout_logger.cpp  stderr_buff_logger.cpp  stderr_logger.cpp  stdout_logger.cpp
lib/unixprimwrap/: .gitignore  CMakeLists.txt  README.md
lib/unixprimwrap/include/: descriptor.h  pipe.h  unixprimwrap_errors.h
lib/unixprimwrap/include/unixprimwrap/: descriptor.h  errors.h  fork.h  pipe.h
lib/unixprimwrap/src/: descriptor.cpp  errors.cpp  fork.cpp  pipe.cpp  unixprimwrap_errors.cpp
scripts/: run.sh  run_build.sh  run_memcheck.sh  run_static_checks.sh
src/: main.c  main.cpp  utils.cpp
